Changed the wya the path to text file is made